test/error/type/err3.rzy
type
  Weekday = Enum
    Monday;
    Tuesday;
    Wednesday;
    Thursday;
    Friday;
    Saturday;
    Sunday;
  end

component
  Err3

    implementation elementary

    function foo( x: Weekday )
      z : Weekday = x + Weekday.Tuesday;
    end

  end

